--- a/daily-frontend/src/styles/main.scss
+++ b/daily-frontend/src/styles/main.scss
@@ -1,16 +1,3 @@
-.App {
-    background-color: black;
-    color: white;
-    text-align: center;
-    .App-header {
-        background-color: #222;
-        height: 150px;
-        padding: 20px;
-        color: white;
-    }
-
-    .App-intro {
-        font-size: large;
-        
-    }
-}
+@import 'lib/all';
+@import 'base/all';
+@import 'components/all';
