--- a/daily-frontend/src/styles/components/Header/_Weather.scss
+++ b/daily-frontend/src/styles/components/Header/_Weather.scss
@@ -1,4 +1,8 @@
 .weather-wrapper {
-    display: inline-block;
-    float: right;    
+    position: absolute;
+    right: 1rem;
+
+    @include media("<phone") {
+        display: none;
+    }
 }
