--- a/daily-frontend/src/styles/components/Header/_Weather.scss
+++ b/daily-frontend/src/styles/components/Header/_Weather.scss
@@ -25,7 +25,7 @@
             // border: 1px solid rgba(0, 0, 0, 0.5);
             box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
 
-            color: $oc-gray-0;
+            //color: $oc-gray-0;
         }
 
         .dimmer:hover {
