날씨상세정보창과 클릭시 보여주기 설정

--- a/daily-frontend/src/styles/components/Header/_Header.scss
+++ b/daily-frontend/src/styles/components/Header/_Header.scss
@@ -23,6 +23,7 @@
         @import 'Logo';
         @import 'Weather';
         @import 'WIcon';
+        @import 'WeatherDetail';
     }
 
     @include media("<desktop") {
