--- a/daily-frontend/src/styles/components/Header/_Weather.scss
+++ b/daily-frontend/src/styles/components/Header/_Weather.scss
@@ -13,24 +13,26 @@
     }
     
     .weather {
+        background-color: white;
         position: relative;
         min-height: 2rem;
         min-width: 12rem;
-        padding: 0.5rem 1rem;
+        padding: 0.8rem 1rem;
         top: 50%;
         transform: translateY(-50%);
-
-        &:hover {
-            border-radius: 5px;
-            // border: 1px solid rgba(0, 0, 0, 0.5);
-            box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
-
-            //color: $oc-gray-0;
-        }
+        cursor: pointer;
+        user-select: none;
+        transition: all 0.2s;
 
         .dimmer:hover {
             border-radius: 5px;
         }
-
     }
+
+    .weather.over {
+        transform: translateY(-20%);
+        border-radius: 5px;
+        box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
+    }
+
 }
