날씨상세정보 일부 수정

--- a/daily-frontend/src/styles/components/Header/_Weather.scss
+++ b/daily-frontend/src/styles/components/Header/_Weather.scss
@@ -17,7 +17,7 @@
         position: relative;
         min-height: 2rem;
         min-width: 12rem;
-        padding: 0.8rem 1rem;
+        // padding: 0.8rem 1rem;
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
