--- a/daily-frontend/src/styles/components/Header/_WeatherDetail.scss
+++ b/daily-frontend/src/styles/components/Header/_WeatherDetail.scss
@@ -1,25 +1,46 @@
-.weather-detail {
-	padding-top: 2rem;
-	padding-bottom: 1rem;
-	margin-top: 1rem;
-	border-top: 1px solid $oc-gray-4;
+.weather-detail-wrapper {
+	text-align: center;
 
-	.detail-wrapper {
-		display: inline-block;
+	.weather-light-info {
+		padding: 1rem;
 
-		.weather-sky {
-			display: inline-block;
-			float: left;
+		b {
+			margin-right: 0.5rem;
 		}
+	}
 
-		.weather-temp {
-			float: left;
-			margin-left: 1.2rem;
-			border-left: 1px solid $oc-gray-4;
-			padding-left: 1rem;
+	.weather-detail-info {
+		padding: 2rem 1rem;
+		border-top: 1px solid $oc-gray-4;
 
-			p span {
-				font-size: 3.5rem;
+		.weather-detail {
+			display: inline-block;
+			position: relative;
+
+			.weather-sky {
+				float: left;
+			}
+
+			.weather-temp-hum {
+				float: left;
+				margin-left: 1.2rem;
+				border-left: 1px solid $oc-gray-4;
+				padding-top: 0.5rem;
+				padding-bottom: 0.5rem;
+				padding-left: 1rem;
+				height: 100%;
+				top: -0.7rem;
+				position: relative;
+
+				p span {
+					position: relative;
+					font-size: 2.4rem;
+					margin-left: 0.5rem;
+				}
+
+				.temperature + .humidity {
+					padding-top: 1rem;
+				}
 			}
 		}
 	}
