Weather Detail gradient modified

--- a/daily-frontend/src/styles/lib/_all.scss
+++ b/daily-frontend/src/styles/lib/_all.scss
@@ -2,3 +2,4 @@
 @import '~include-media/dist/include-media';
 @import '~semantic-ui-css/semantic.min.css';
 @import '~weather-icons/css/weather-icons.min.css';
+@import '~weather-icons/css/weather-icons-wind.min.css';
