--- a/daily-frontend/src/styles/components/Header/_Weather.scss
+++ b/daily-frontend/src/styles/components/Header/_Weather.scss
@@ -17,6 +17,7 @@
         position: relative;
         min-height: 2rem;
         min-width: 12rem;
+        float: left;
         // padding: 0.8rem 1rem;
         top: 50%;
         transform: translateY(-50%);
@@ -32,6 +33,14 @@
         transform: translateY(-10%);
         border-radius: 5px;
         box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
+    }
+
+    .weather-search {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        float: left;
+        margin-left: 0.3rem;
     }
 
 }
