--- a/daily-frontend/src/styles/components/Header/_WeatherDetail.scss
+++ b/daily-frontend/src/styles/components/Header/_WeatherDetail.scss
@@ -1,5 +1,6 @@
 .weather-detail-wrapper {
 	text-align: center;
+	border-radius: 5px;
 
 	.weather-light-info {
 		padding: 1rem;
@@ -8,6 +9,9 @@
 		b {
 			margin-right: 0.5rem;
 		}
+	}
+	.weather-light-info.over {
+		background: linear-gradient(rgba(0, 191, 255, 0.2), rgba(255, 255, 255, 0.2) 80%);
 	}
 
 	.weather-detail-info {
@@ -47,20 +51,51 @@
 					padding-top: 1rem;
 				}
 			}
+
+			.weather-extras {
+				clear: both;
+				display: flex;
+				flex-direction: row;
+
+				.extra {
+					//display: inline-block;
+					flex: 1;
+				}
+
+				// .extra + .extra {
+				// 	padding: 0 0.3rem;
+				// }
+			}
 		}
 	}
+
 	.weather-date {
 		padding-top: 0.5rem;
 		padding-bottom: 0.5rem;
 		border-top: 1px solid $oc-gray-4;
+		background: linear-gradient(0deg, rgba(200, 200, 200, 0.2), rgba(255, 255, 255, 0.2) 60%);
 
 		.weather-basetime {
 			text-align: right;
 
-			.reload-btn {
-				margin-left: 0.5rem;
+			.reload-time {
+				font-size: 0.8rem;
 				margin-right: 0.5rem;
+			}
+
+			.reload-btn {
+				margin-right: 0.5rem;
+				font-size: 0.7rem;
 			}
 		}
 	}
+}
+
+.weather-detail-wrapper.day {
+	background: white;
+	color: $oc-gray-6;
+}
+.weather-detail-wrapper.night {
+	background: $oc-gray-7;
+	color: $oc-gray-1;
 }
