--- a/daily-frontend/src/styles/components/Header/_WeatherDetail.scss
+++ b/daily-frontend/src/styles/components/Header/_WeatherDetail.scss
@@ -58,7 +58,6 @@
 				flex-direction: row;
 
 				.extra {
-					//display: inline-block;
 					flex: 1;
 				}
 
@@ -88,6 +87,7 @@
 				font-size: 0.7rem;
 			}
 			.reload-btn.day {
+				color: rgba(240, 62, 62, 0.9)!important;
 				box-shadow:0 0 0 1px rgba(240, 62, 62, .5) inset;
 			}
 			.reload-btn.night {
