--- a/daily-frontend/src/styles/components/Header/_Header.scss
+++ b/daily-frontend/src/styles/components/Header/_Header.scss
@@ -1,35 +1,37 @@
-.header-wrapper, .header-spacer {
-    height: 4rem;
-    width: 100%;
-}
-
-.header-wrapper {
+header {
     position: fixed;
-    background: white;
-    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: $z-index-header;
 
-    .header {
-        width: 1000px;
-        height: 4rem;
-        line-height: 4rem;
-        margin: 0 auto;
-        position: relative;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        color: $oc-gray-5;
-        font-size: 1rem;
-        z-index: 10;
-
-        @import 'Logo';
-        @import 'Weather';
-        @import 'WIcon';
-        @import 'WeatherDetail';
+    .header-wrapper, .header-spacer {
+        height: $header-height;
+        width: 100%;
     }
 
-    @include media("<desktop") {
+    .header-wrapper {
+        background: white;
+        box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
+
         .header {
             width: 100%;
+            height: $header-height;
+            line-height: $header-height;
+            position: relative;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            color: $oc-gray-5;
+            font-size: 1rem;
+            z-index: 10;
+
+            @import 'Logo';
+        }
+
+        @include media("<desktop") {
+            .header {
+                width: 100%;
+            }
         }
     }
 }
-
