--- a/daily-frontend/src/styles/components/Sidebar/_MenuItem.scss
+++ b/daily-frontend/src/styles/components/Sidebar/_MenuItem.scss
@@ -1,25 +1,26 @@
-li {
+a {
     font-size: 1.5rem;
     padding: 1rem;
     display: block;
     position: relative;
+    color: $oc-gray-4;
+    text-decoration: none;
 
-    &:hover {
-        background: $oc-grape-8;
+    &:hover, &.white:hover,
+    &.active, &:active,
+    &.white.active, &.white:active
+    {
+        background: $oc-gray-6;
+        color: white;
     }
 
-    a {
-        color: $oc-gray-4;
-        text-decoration: none;
-
-        &:hover {
-            color: white;
-        }
-    }
-
-    &.active, &:active {
-        background: $oc-grape-8;
-
+    &.active, &:active,
+    &.white.active, &.white:active,
+    &.red.active, &.red:active,
+    &.grape.active, &.grape:active,
+    &.green.active, &.green:active,
+    &.teal.active, &.teal:active,
+    {
         &:after {
             content: "";
             background: $oc-gray-1;
@@ -30,10 +31,33 @@ li {
             height: 0.8rem;
             transform: translateY(-50%) rotate(45deg);
         }
+    }
 
-        a {
+    &.red {
+        &:hover, &.active, &:active {
+            background: $oc-red-8;
             color: white;
-            text-decoration: none;
+        }
+    }
+
+    &.grape {
+        &:hover, &.active, &:active {
+            background: $oc-grape-8;
+            color: white;
+        }
+    }
+
+    &.green {
+        &:hover, &.active, &:active  {
+            background: $oc-green-8;
+            color: white;
+        }
+    }
+
+    &.teal {
+        &:hover, &.active, &:active  {
+            background: $oc-teal-8;
+            color: white;
         }
     }
 }
