--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -1,8 +1,13 @@
 .contents-wrapper {
-    padding-top: 5rem;
-    padding-left: 5rem;
     display: block;
+    top: $header-height;
+    left: $header-height;
+    right: 0;
     bottom: 0;
-    position: relative;
+    position: fixed;
     z-index: 0;
+
+    .subcontents-wrapper {
+    	padding: 1rem 2rem 2rem 1rem;
+    }
 }
