--- a/daily-frontend/src/styles/components/Header/_Header.scss
+++ b/daily-frontend/src/styles/components/Header/_Header.scss
@@ -11,7 +11,8 @@ header {
     }
 
     .header-wrapper {
-        background: white;
+        //background: white;
+        background: black;
         box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
 
         .header {
@@ -32,6 +33,7 @@ header {
                 margin-right: 3rem;
                 margin-top: 0.7rem;
                 width: 300px;
+
             }
         }
 
