--- a/daily-frontend/src/styles/components/Header/_Header.scss
+++ b/daily-frontend/src/styles/components/Header/_Header.scss
@@ -30,7 +30,7 @@ header {
 
             .quick-search {
                 float: right;
-                margin-right: 3rem;
+                //margin-right: 0.2%;
                 margin-top: 0.7rem;
                 width: 300px;
 
