--- a/daily-frontend/src/styles/components/Login/_Login.scss
+++ b/daily-frontend/src/styles/components/Login/_Login.scss
@@ -1,18 +1,19 @@
 .login-wrapper {
     text-align: center;
     display: block;
-    position: fixed;
+    position: absolute;
     top: 0;
-    left: 0;
-    right: 0;
     bottom: 0;
+    width: 100%;
     background-size: cover;
 
     .login-content {
         display: inline-block;
-        margin: 0px auto;
+        margin-top: 20%;
         position: relative;
-        top: 25%;
+        // margin: 0px auto;
+        // position: relative;
+        // top: 25%;
 
         .login-title {
             padding: 0 2rem 2rem;
@@ -42,9 +43,9 @@
 
                     i {
                         color: white;
-                        font-size: 2rem;
-                        line-height: 2rem;
-                        padding: 0.3rem;
+                        font-size: 1.8rem;
+                        line-height: 1.8rem;
+                        padding: 0.5rem;
                     }
 
                     &:after {
