로그인 다시수정

--- a/daily-frontend/src/styles/components/Login/_Login.scss
+++ b/daily-frontend/src/styles/components/Login/_Login.scss
@@ -9,11 +9,8 @@
 
     .login-content {
         display: inline-block;
-        margin-top: 20%;
+        margin-top: 25vh;
         position: relative;
-        // margin: 0px auto;
-        // position: relative;
-        // top: 25%;
 
         .login-title {
             padding: 0 2rem 2rem;
