--- a/daily-frontend/src/styles/components/Login/_Login.scss
+++ b/daily-frontend/src/styles/components/Login/_Login.scss
@@ -122,4 +122,20 @@
             }
         }
     }
+
+    .float-message {
+        position: absolute;
+        right: 50px;
+        bottom: 70px;
+        font-weight: 700;
+        width: auto!important;
+        transition: all 0.5s ease-in-out;
+
+        &.bounceInUp, &.bounceOutDown {
+            -webkit-animation-duration: 0.5s;
+            animation-duration: 0.5s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+        }
+    }
 }
