로그아웃 버튼 제작

--- a/daily-frontend/src/styles/components/Header/_Header.scss
+++ b/daily-frontend/src/styles/components/Header/_Header.scss
@@ -35,6 +35,8 @@ header {
                 width: 300px;
 
             }
+            
+            @import 'UserInfo';
         }
 
         @include media("<desktop") {
