일부 코드 정리...

--- a/daily-frontend/src/styles/components/Orderer/_OrdererAdd.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererAdd.scss
@@ -11,5 +11,15 @@
         border-radius: 4px;
         background: $oc-grape-6;
         padding: 0.5rem;
+        user-select: none;
+        cursor: pointer;
+
+        &:hover {
+            background: $oc-grape-8;
+        }
+
+        &:active {
+            background: $oc-grape-7;
+        }
     }
 }
