--- a/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
@@ -4,11 +4,19 @@
         border-top: 1px solid $oc-gray-7;
         border-bottom: 1px solid $oc-gray-7;
         padding-top: 0.7rem;
-        padding-left: 0.5rem;
+        padding-left: 1rem;
         padding-bottom: 0.7rem;
-        color: $oc-gray-7;
+        color: $oc-gray-6;
         font-weight: 700;
     }
 
-    @import 'OrdererItem';
+    .orderer-list-item {
+        background: $oc-gray-9;
+        color: white;
+        padding: 0.7rem 1rem;
+        border-bottom: 1px solid $oc-gray-7;
+
+        @import 'OrdererItem';
+    }
+
 }
