--- a/daily-frontend/src/styles/base/_reset.scss
+++ b/daily-frontend/src/styles/base/_reset.scss
@@ -6,5 +6,6 @@ body {
     margin: 0;
     padding: 0;
     background: $oc-gray-1;
-    font-family: 'Nanum Gothic', serif;
+    // font-family: 'Nanum Gothic', serif;
+    font-family: 'Ubuntu', sans-serif;
 }
