--- a/daily-frontend/src/styles/components/Login/_Login.scss
+++ b/daily-frontend/src/styles/components/Login/_Login.scss
@@ -1,18 +1,22 @@
 .login-wrapper {
     text-align: center;
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
+    display: flex;
+    // position: absolute;
+    // top: 0;
+    // bottom: 0;
     width: 100%;
+    height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: 50% 50%;
     user-select: none;
     overflow: hidden;
+    align-items: center;
+    justify-content:center;
 
     .login-content {
         display: inline-block;
-        margin-top: 25vh;
+        // margin-top: 25vh;
         position: relative;
 
         .login-title {
@@ -25,7 +29,8 @@
         }
 
         .login-form {
-            background: rgba(0, 0, 0, 0.15);
+            background: rgba(255, 255, 255, .3);
+            border-radius: 2%;
             padding: 5rem;
 
             .login-item {
