--- a/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
@@ -1,16 +1,22 @@
 .orderer-item {
-    font-weight: bold;
+    font-weight: 600;
     padding: 0.7rem 1rem 0.7rem 1.5rem;
     height: 2.5rem;
     user-select: none;
     cursor: pointer;
-    transition: background 0.2s ease;
+    transition: background 0.2s ease-in;
+
+    &:hover, &.active, &:active {
+        .orderer-chevron {
+            margin-right: -0.7rem;
+        }
+    }
 
     &:hover {
-        background: $oc-grape-8;
+        background: $oc-grape-5;
     }
     &.active, &:active {
-        background: $oc-grape-9;
+        background: $oc-grape-6;
     }
 
     .orderer-name {
@@ -18,6 +24,7 @@
     }
 
     .orderer-chevron {
+        transition: all 0.2s ease-out;
         float: right;
     }
 }
