각 거래처정보 담는 컴포넌트 수정...

--- a/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
@@ -19,6 +19,16 @@
         background: $oc-grape-6;
     }
 
+    &.no-item {
+        text-align: center;
+        transition: none;
+        cursor: default;
+
+        &:hover, &:active, &.active {
+            background-color: transparent;
+        }
+    }
+
     .orderer-name {
         float: left;
     }
