--- a/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererItem.scss
@@ -1,7 +1,7 @@
 .orderer-item {
     font-weight: 600;
     padding: 0.7rem 1rem 0.7rem 1.5rem;
-    height: 2.5rem;
+    height: 2.8rem;
     user-select: none;
     cursor: pointer;
     transition: background 0.2s ease-in;
@@ -40,5 +40,5 @@
 }
 
 .orderer-item + .orderer-item {
-    border-bottom: 1px solid $oc-gray-7;
+    border-top: 1px solid $oc-gray-7;
 }
