거래처, 상품종류 컴포넌트화'

--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -11,6 +11,7 @@
 
     .subcontents-wrapper {
     	padding: 2rem 2rem 0;
+        height: 100%;
 
         .main-title {
             color: $oc-gray-8;
