--- a/daily-frontend/src/styles/components/Orderer/_OrdererWidget.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererWidget.scss
@@ -1,6 +1,8 @@
 .orderer-widget {
     background: $oc-gray-8;
-    height: 100vh;
+    position: fixed;
+    bottom: 0;
+    top: 4rem;
     display: inline-block;
     width: 300px;
     padding-top: 1rem;
