--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -17,6 +17,15 @@
             color: $oc-gray-8;
         }
 
+        ul {
+            -webkit-padding-start: 0;
+            padding-right: 10px !important;
+
+            li {
+                padding-right: 20px !important;
+            }
+        }
+
         @import 'WriteRoute';
     }
 }
