거래처 총 갯수 추가

--- a/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
@@ -8,6 +8,8 @@
         padding-bottom: 0.7rem;
         color: $oc-gray-6;
         font-weight: 700;
+        cursor: default;
+        user-select: none;
     }
 
     .orderer-list-item {
