--- a/daily-frontend/src/styles/components/Orderer/_InfoCard.scss
+++ b/daily-frontend/src/styles/components/Orderer/_InfoCard.scss
@@ -2,5 +2,26 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 250px;
+    height: 180px;
+
+    .label {
+        position: absolute;
+        display: inline-block;
+        top: 50%;
+        padding: 1rem 1rem 1rem 5rem;
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 2rem;
+        background-color: rgba(255, 255, 255, .75);
+        box-shadow: 5px 4px 7px 0px rgba(0, 0, 0, .3);
+        border-radius: 0px 5px 5px 0px;
+        user-select: none;
+        cursor: default;
+    }
+
+    .actions {
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+    }
 }
