--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -1,4 +1,4 @@
-.orderer_info {
+.orderer_info_wrapper {
     position: absolute;
     display: inline-block;
     top: 0px;
@@ -12,5 +12,12 @@
         font-size: 2rem;
     }
 
-    @import 'InfoCard';
+    .orderer_info {
+        margin: 0px auto;
+        max-width: 900px;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, .25);
+        position: relative;
+
+        @import 'InfoCard';
+    }
 }
