--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -17,6 +17,7 @@
         max-width: 900px;
         box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, .25);
         position: relative;
+        background: white;
 
         @import 'InfoCard';
     }
