--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -5,7 +5,7 @@
     left: 21.5rem;
     right: 0px;
     bottom: 0px;
-    margin: 1.5rem;
+    margin: 1.5rem 1.5rem 0;
 
     &.noid {
         text-align: center;
