--- a/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
@@ -3,13 +3,27 @@
         margin-top: 1rem;
         border-top: 1px solid $oc-gray-7;
         border-bottom: 1px solid $oc-gray-7;
-        padding-top: 0.7rem;
+        padding-top: 1rem;
         padding-left: 1rem;
         padding-bottom: 0.7rem;
         color: $oc-gray-6;
         font-weight: 700;
         cursor: default;
         user-select: none;
+
+        .badges {
+            color: black;
+            border-radius: 100%;
+            width: 20px;
+            height: 20px;
+            background: lightgray;
+            display: inline-block;
+            clear: right;
+            text-align: center;
+            font-size: .8rem;
+            font-weight: 600;
+            margin-left: 3px;
+        }
     }
 
     .orderer-list-item {
