거래처 삭제 임시 작업

--- a/daily-frontend/src/styles/components/Content/_OrdererRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_OrdererRoute.scss
@@ -1,5 +1,5 @@
 .orderer-wrapper {
-    height: 100vh;
+    // height: 100vh;
 
     @import './../Orderer/all';
     @import './../Orderer/OrdererInfo';
