Card 컴포넌트 추가

--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -8,6 +8,7 @@
     padding-bottom: 2rem;
     z-index: 0;
     overflow-y: auto;
+    background: lighten(gray, 42%);
 
     .subcontents-wrapper {
     	padding: 2rem 2rem 0;
