--- a/daily-frontend/src/components/Card/Card.scss
+++ b/daily-frontend/src/components/Card/Card.scss
@@ -4,9 +4,8 @@
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
     line-height: 1.2;
     text-align: left;
-    background: rgba(white, .15);
+    background: white;
     font-size: 1.2rem;
-    color: white;
 
     // No Border Radius
     &.rectangle {
@@ -16,6 +15,15 @@
     // No Dropshadow
     &.noshadow {
         box-shadow: none;
+    }
+
+    &.transparent {
+        background: rgba(white, .15);
+        color: white;
+
+        .title {
+            color: white;
+        }
     }
 
     // Top Border Color
@@ -39,7 +47,7 @@
         font-weight: 600;
         // font-size: 1rem;
         // color: gray;
-        color: white;
+        color: gray;
         margin-bottom: .7rem;
         letter-spacing: .5px;
         cursor: default;
