Server 거래처 통계 데이터가져오기 작업

--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -14,6 +14,10 @@
         line-height: 1.5;
     }
 
+    .statinfo_wrapper {
+        display: flex;
+    }
+
     .orderer_info {
         margin: 0px auto;
         max-width: 900px;
