--- a/daily-frontend/src/styles/components/Orderer/_OrdererWidget.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererWidget.scss
@@ -7,6 +7,7 @@
     width: 300px;
     padding-top: 1rem;
     box-shadow: 0px 1px 8px 2px rgba(0, 0, 0, 0.7);
+    z-index: 4;
 
     @import 'OrdererAdd';
     @import 'OrdererList';
