--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -12,6 +12,10 @@
         text-align: center;
         font-size: 2rem;
         line-height: 1.5;
+
+        .bar-chart {
+            flex: 2;
+        }
     }
 
     .statinfo_wrapper {
