--- a/daily-frontend/src/components/AnimMoreButton/AnimMoreButton.scss
+++ b/daily-frontend/src/components/AnimMoreButton/AnimMoreButton.scss
@@ -30,18 +30,6 @@
                 border-radius: 2px;
                 border: 1px solid darkgray;
 
-                // .center-chevron {
-                //     position: absolute;
-                //     border-top: 7px solid gray;
-                //     border-left: 5px solid transparent;
-                //     border-right: 5px solid transparent;
-                //     transform: translateX(-50%);
-                //     left: 50%;
-                //     animation: fadeIn 1s ease infinite;
-                //     top: calc(-3px + 50%);
-                //     animation-delay: .2s;
-                // }
-                
                 &:before, &:after, .center-chevron {
                     position: absolute;
                     top: 3px;
@@ -69,12 +57,17 @@
 
         &:hover .more-icon:before,
         &:hover .more-icon:after,
-        &:hover .more-icon .center-chevron {
+        &:hover .more-icon .center-chevron,
+        &.active .more-icon:before,
+        &.active .more-icon:after,
+        &.active .more-icon .center-chevron {
             border-top-color: red;
         }
 
         &:hover .more-icon,
-        &:hover .circle {
+        &:hover .circle,
+        &.active .more-icon,
+        &.active .circle {
             transition: all .5s ease-out;
             border-color: lighten(red, 20%);
         }
@@ -82,7 +75,11 @@
             animation: shakes .12s ease-in-out;
             background-color: lighten(red, 46%);
         }
-        &:active .more-icon {
+        &.active .more-icon {
+            background-color: lighten(red, 46%);
+        }
+        &:active .more-icon,
+        &.active .more-icon {
             transform: rotate(180deg) translate(50%, 50%);
             transition: all .15s ease-out;
         }
