거래처 개별 주문사항 리스트 업데이트

--- a/daily-frontend/src/components/ListRow/ListRow.scss
+++ b/daily-frontend/src/components/ListRow/ListRow.scss
@@ -1,7 +1,11 @@
 .list-row {
-    height: 1.5rem;
+    display: flex;
+    padding: 5px 0;
 }
 
 .list-row + .list-row {
-    border-top: 1px solid darkgray;
+    border-top: 1px solid lightgray;
+}
+.list-row:nth-child(odd) {
+    background-color: lighten(lightgray, 10%);
 }
