--- a/daily-frontend/src/components/DataList/DataList.scss
+++ b/daily-frontend/src/components/DataList/DataList.scss
@@ -1,3 +1,114 @@
 .data-list-wrapper {
-    padding: .5rem;
+    margin: 0 1.5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid gray;
+
+    &.hide {
+        display: none;
+    }
+    &.flipInX {
+        backface-visibility: visible!important;
+        animation-name: flipInX;
+        animation-duration: 1s;
+        animation-fill-mode: both;
+    }
+
+    .header_row {
+        flex: 1;
+        display: flex;
+        padding: 5px 0;
+        border-top: 2px solid gray;
+        border-bottom: 1px solid darkgray;
+        background: lighten(darkgray, 20%);
+    }
 }
+
+/*base code*/
+
+/*the animation definition*/
+@-webkit-keyframes flipInX {
+    0% {
+      -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+      -webkit-transition-timing-function: ease-in;
+      transition-timing-function: ease-in;
+      display: flex;
+      opacity: 0
+    }
+    40% {
+      -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      -webkit-transition-timing-function: ease-in;
+      transition-timing-function: ease-in
+    }
+    60% {
+      -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+      opacity: 1
+    }
+    80% {
+      -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+      transform: perspective(400px) rotate3d(1, 0, 0, -5deg)
+    }
+    100% {
+      -webkit-transform: perspective(400px);
+      transform: perspective(400px)
+    }
+}
+@keyframes flipInX {
+    0% {
+      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+      transition-timing-function: ease-in;
+      display: flex;
+      opacity: 0
+    }
+    40% {
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      transition-timing-function: ease-in
+    }
+    60% {
+      transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+      opacity: 1
+    }
+    80% {
+      transform: perspective(400px) rotate3d(1, 0, 0, -5deg)
+    }
+    100% {
+      transform: perspective(400px);
+    }
+}
+
+@-webkit-keyframes flipOutX {
+    0% {
+      transform: perspective(400px)
+    }
+    30% {
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      opacity: 1
+    }
+    99% {
+      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+      opacity: 0;
+    }
+    100% {
+        display: none;
+    }
+  }
+@keyframes flipOutX {
+    0% {
+      transform: perspective(400px)
+    }
+    30% {
+      transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+      opacity: 1
+    }
+    99% {
+      transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+      opacity: 0;
+    }
+    100% {
+        display: none;
+    }
+  }
+  
