--- a/daily-frontend/src/components/ListColumn/ListColumn.scss
+++ b/daily-frontend/src/components/ListColumn/ListColumn.scss
@@ -1,8 +1,27 @@
 .list-column {
+    flex: 1;
+    padding: 3px 5px;
+    text-overflow: ellipsis;
+    word-wrap: normal;
+    white-space: nowrap;
+    overflow: hidden;
+
+    &.bold {
+        font-weight: 600;
+    }
     &.center {
         text-align: center;
     }
+    &.right {
+        text-align: right;
+    }
+    &.address {
+        flex: 3;
+    }
+    &.date {
+        flex: 2;
+    }
 }
-// .list-column + .list-column {
-//     border-left: 1px solid darkgray;
-// }
+.list-column + .list-column {
+    border-left: 1px solid lighten(lightgray, 5%);
+}
