--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -1,8 +1,8 @@
 .orderer_info_wrapper {
     position: absolute;
     display: inline-block;
-    top: 0px;
-    left: 21.5rem;
+    top: 4rem;
+    left: calc(300px + 4rem);
     right: 0px;
     bottom: 0px;
     padding: 1.5rem 1.5rem 0;
