--- a/daily-frontend/src/styles/base/_reset.scss
+++ b/daily-frontend/src/styles/base/_reset.scss
@@ -2,10 +2,15 @@
     box-sizing: border-box;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
-    background: $oc-gray-1;
+    background-color: lighten(gray, 42%);
     // font-family: 'Nanum Gothic', serif;
     font-family: 'Ubuntu', sans-serif;
 }
