카드 타이틀 윗 여백 수정

--- a/daily-frontend/src/components/Card/Card.scss
+++ b/daily-frontend/src/components/Card/Card.scss
@@ -1,5 +1,5 @@
 .card {
-    padding: 1.2rem .7rem;
+    padding: 1rem .7rem 1.2rem;
     border-radius: 3px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
     line-height: 1.2;
