데이터리스트 표현방법 수정

--- a/daily-frontend/src/components/ListColumn/ListColumn.scss
+++ b/daily-frontend/src/components/ListColumn/ListColumn.scss
@@ -21,6 +21,9 @@
     &.date {
         flex: 2;
     }
+    &.red {
+        color: red;
+    }
 }
 .list-column + .list-column {
     border-left: 1px solid lighten(lightgray, 5%);
