--- a/daily-frontend/src/styles/components/Login/_Login.scss
+++ b/daily-frontend/src/styles/components/Login/_Login.scss
@@ -76,6 +76,8 @@
 
                     input {
                         border: 0px;
+                        margin-top: 5px;
+                        min-width: 200px !important;
                     }
                     & > div {
                         margin-top: 2px;
