코드 일부 수정

--- a/daily-frontend/src/styles/components/Content/_SearchRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_SearchRoute.scss
@@ -11,6 +11,7 @@
 
     .DayPicker-wrapper {
         padding-bottom: 0px;
+        outline: none;
 
         .DayPicker-Footer {
             text-align: center;
