캘린더에 한달내 날짜마다 주문이 있었는지 표시하기

--- a/daily-frontend/src/styles/components/Content/_SearchRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_SearchRoute.scss
@@ -13,6 +13,22 @@
         padding-bottom: 0px;
         outline: none;
 
+        .DayPicker-Day--existOrder {
+            position: relative;
+
+            &:after {
+                content: '';
+                display: inline-block;
+                position: absolute;
+                width: 4px;
+                height: 4px;
+                border-radius: 100%;
+                background: red;
+                right: 2px;
+                top: 2px;
+            }
+        }
+
         .DayPicker-Footer {
             text-align: center;
 
