--- a/daily-frontend/src/components/Card/Card.scss
+++ b/daily-frontend/src/components/Card/Card.scss
@@ -46,10 +46,9 @@
 
     .title {
         font-weight: 600;
-        // font-size: 1rem;
-        // color: gray;
+        position: relative;
         color: darkgray;
-        margin-bottom: .7rem;
+        margin-bottom: 1rem;
         letter-spacing: .5px;
         cursor: default;
         user-select: none;
@@ -57,9 +56,9 @@
         &:after {
             content: '';
             position: absolute;
-            top: 40px;
             left: 10px;
             right: 10px;
+            bottom: -.8rem;
             height: 1px;
             background: radial-gradient(circle, lighten(gray, 40%), lighten(gray, 40%) 60%, rgba(255, 255, 255, .1));
         }
