통계페이지 수정 시작

--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -27,5 +27,6 @@
         @import 'MainRoute';
         @import 'WriteRoute';
         @import 'SearchRoute';
+        @import 'StatRoute';
     }
 }
