Input 컴포넌트 속성 변경

--- a/daily-frontend/src/components/Input/Input.scss
+++ b/daily-frontend/src/components/Input/Input.scss
@@ -1,6 +1,6 @@
 .input {
     outline: none;
-    border: 1px solid gray;
+    border: 1px solid lightgray;
     padding: .5rem .85rem;
     border-radius: 5px;
     font-size: 1rem;
