여러 필터링 단어들을 추가하고 삭제할 수 있도록 설정

--- a/daily-frontend/src/components/CategoryStatistics/CategoryStatistics.scss
+++ b/daily-frontend/src/components/CategoryStatistics/CategoryStatistics.scss
@@ -17,6 +17,20 @@
             height: 40.7px;
             font-weight: 600;
             font-size: 1.07rem;
+            color: #2185d0;
+
+            &:focus {
+                border: 1px solid #2185d0;
+
+                &::placeholder {
+                    color: #7aa6c7;
+                }
+            }
+        }
+
+        .filter-list {
+            display: inline-block;
+            margin-left: 2rem;
         }
     }
 }
