차트카드 컴포넌트에 자식노드가 지정됐을경우 표현하게 한다

--- a/daily-frontend/src/components/ChartCard/ChartCard.scss
+++ b/daily-frontend/src/components/ChartCard/ChartCard.scss
@@ -10,6 +10,10 @@
         transform: translateX(-50%) translateY(-50%);
         font-size: 1.5rem;
     }
+
+    .chart-wrapper {
+        display: flex;
+    }
 }
 
 .chart-card + .chart-card {
