stat api에서 가져온 detail자료를 화면에 표현해 준다

--- a/daily-frontend/src/styles/components/Content/_StatRoute.scss
+++ b/daily-frontend/src/styles/components/Content/_StatRoute.scss
@@ -2,6 +2,10 @@
     padding-left: 1.5rem;
     transition: all .4s;
 
+    #category-chart {
+        flex: 3;
+    }
+
     .title {
         margin-bottom: 1.5rem;
         
