거래처 페이지내에 그래프가 안보이는 버그 해결

--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -20,7 +20,10 @@
 
     .statinfo_wrapper {
         display: flex;
-        // position: relative;
+        
+        .chart-wrapper {
+            display: block;
+        }
     }
 
     .orderer_info {
