--- a/daily-frontend/src/components/ChartCard/ChartCard.scss
+++ b/daily-frontend/src/components/ChartCard/ChartCard.scss
@@ -6,8 +6,8 @@
         display: inline;
         position: absolute;
         top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        left: 49%;
+        transform: translateX(-50%);
         font-size: 1.5rem;
     }
 
