모바일버젼화 작업

--- a/daily-frontend/src/styles/components/Content/_Contents.scss
+++ b/daily-frontend/src/styles/components/Content/_Contents.scss
@@ -7,6 +7,10 @@
     height: 100%;
     background: lighten(gray, 42%);
 
+    @include media("<=tablet") {
+        padding-left: 0;
+    }
+
     .subcontents-wrapper {
     	padding: 2rem 2rem 0;
         height: 100%;
