--- a/daily-frontend/src/styles/base/_reset.scss
+++ b/daily-frontend/src/styles/base/_reset.scss
@@ -14,3 +14,9 @@ body {
     // font-family: 'Nanum Gothic', serif;
     font-family: 'Ubuntu', sans-serif;
 }
+
+.ui.input {
+    border: 0px !important;
+    padding: 0px;
+    min-width: 250px !important;
+}
