--- a/daily-frontend/src/styles/components/Header/_Header.scss
+++ b/daily-frontend/src/styles/components/Header/_Header.scss
@@ -11,7 +11,6 @@ header {
     }
 
     .header-wrapper {
-        //background: white;
         background: black;
         box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
 
@@ -29,11 +28,9 @@ header {
             @import 'Logo';
             @import 'UserInfo';
         }
+    }
 
-        @include media("<desktop") {
-            .header {
-                width: 100%;
-            }
-        }
+    @include media("<tablet") {
+        box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.4);
     }
 }
