--- a/daily-frontend/src/styles/components/Header/_Logo.scss
+++ b/daily-frontend/src/styles/components/Header/_Logo.scss
@@ -1,8 +1,34 @@
-.logo {
+.logo-wrapper {
 	display: inline-block;
-	color: white;
-	font-size: 1.5rem;
-	user-select: none;
-	cursor: pointer;
-	font-weight: 700;
+
+	.hamburger {
+		display: none;
+		cursor: pointer;
+		position: relative;
+		top: 50%;
+		transform: translateY(-7%);
+
+		&:active, &.active {
+			color: red;
+		}
+	}
+
+	@include media("<=tablet") {
+		margin-left: -5px;
+
+		.hamburger {
+			display: inline-block;
+		}
+	}
+
+	.logo {
+		color: white;
+		font-size: 1.5rem;
+		user-select: none;
+		font-weight: 700;
+
+		&:hover {
+			color: lightgray;
+		}
+	}
 }
