--- a/daily-frontend/src/styles/components/Login/_Login.scss
+++ b/daily-frontend/src/styles/components/Login/_Login.scss
@@ -1,9 +1,6 @@
 .login-wrapper {
     text-align: center;
     display: flex;
-    // position: absolute;
-    // top: 0;
-    // bottom: 0;
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -16,7 +13,6 @@
 
     .login-content {
         display: inline-block;
-        // margin-top: 25vh;
         position: relative;
 
         .login-title {
@@ -26,12 +22,24 @@
                 color: $oc-violet-7;
                 font-size: 5rem;
             }
+
+            @include media("<tablet") {
+                padding-bottom: 1rem;
+
+                h1 {
+                    font-size: 3.5rem;
+                }
+            }
         }
 
         .login-form {
             background: rgba(255, 255, 255, .3);
             border-radius: 2%;
             padding: 5rem;
+
+            @include media("<tablet") {
+                padding: 2rem;
+            }
 
             .login-item {
                 margin: 0px auto;
