scrollbar 유동성있게 조정

--- a/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererList.scss
@@ -26,6 +26,10 @@
         }
     }
 
+    .orderer-list-scrollbar {
+        height: calc(100vh - 13rem) !important;
+    }
+
     .orderer-list-item {
         background: $oc-gray-9;
         color: white;
