--- a/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
+++ b/daily-frontend/src/styles/components/Orderer/_OrdererInfo.scss
@@ -1,10 +1,10 @@
 .orderer_info_wrapper {
-    position: absolute;
-    display: inline-block;
-    top: 4rem;
-    left: calc(300px + 4rem);
-    right: 0px;
-    bottom: 0px;
+    // position: absolute;
+    // display: inline-block;
+    // top: 4rem;
+    margin-left: 300px;
+    // right: 0px;
+    // bottom: 0px;
     padding: 1.5rem 1.5rem 0;
     // background: radial-gradient(circle at top left, rgba($oc-yellow-8, .5) 10%, rgba($oc-blue-7, .7)), linear-gradient(to left bottom, red 10%, rgba(14, 170, 0, 0.6) 70%, rgba(pink, .3));
 
