모바일버젼에서 클릭시 조그마한 사각형 안보이게하기

--- a/daily-frontend/src/styles/components/Sidebar/_MenuItem.scss
+++ b/daily-frontend/src/styles/components/Sidebar/_MenuItem.scss
@@ -40,6 +40,21 @@ a.menuitem {
         }
     }
 
+    @include media("<tablet") {
+        &.active,
+        &.white.active,
+        &.red.active,
+        &.green.active,
+        &.teal.active,
+        &.blue.active,
+        &.grape.active
+        {
+            &:after {
+                content: none;
+            }
+        }
+    }
+
     &.red {
         &:hover, &.active, &:active {
             background: $oc-red-8;
